log
sá., 17 de may. de 2025  1:50:48: 
 tests:  0|5
total_score: 0/70
3f0e54c
sá., 17 de may. de 2025  1:54:24: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:17: error: unused variable 'col' [-Werror=unused-variable]
   int row = -1, col = -1;
                 ^~~
cc1.exe: all warnings being treated as errors
f1bf933
sá., 17 de may. de 2025  1:54:45: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:56:7: error: unused variable 'col' [-Werror=unused-variable]
   int col = -1;
       ^~~
cc1.exe: all warnings being treated as errors
8d13d34
sá., 17 de may. de 2025  1:55:51: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:56:7: error: variable 'col' set but not used [-Werror=unused-but-set-variable]
   int col = -1;
       ^~~
cc1.exe: all warnings being treated as errors
51da75e
sá., 17 de may. de 2025  1:58:54: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:11: error: unused variable 'k' [-Werror=unused-variable]
   int i,j,k;
           ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:64:7: error: variable 'col' set but not used [-Werror=unused-but-set-variable]
   int col = -1;
       ^~~
cc1.exe: all warnings being treated as errors
ee9a5c2
sá., 17 de may. de 2025 12:13:00: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:13: error: unused variable 'k' [-Werror=unused-variable]
   int i, j, k;
             ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:79:5: error: implicit declaration of function 'pushback' [-Werror=implicit-function-declaration]
     pushback(list, new_node);
     ^~~~~~~~
cc1.exe: all warnings being treated as errors
f1aa008
sá., 17 de may. de 2025 12:13:17: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:79:5: error: implicit declaration of function 'pushback' [-Werror=implicit-function-declaration]
     pushback(list, new_node);
     ^~~~~~~~
cc1.exe: all warnings being treated as errors
ae6e02c
